local and remote modules split from client module, as per suggestion https://github.com/beryx/badass-jlink-plugin/issues/179#issuecomment-817386390